--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,7 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
+baseURL = 'https://jatery.github.io/'
+languageCode = 'zh-tw'
 title = 'My New Hugo Site'
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
