--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -10,7 +10,7 @@ giteaDefaultServer = "https://git.fsfe.org"
 forgejoDefaultServer = "https://v8.next.forgejo.org"
 
 [header]
-layout = "basic"
+    layout = "basic"
 
 [footer]
 showMenu = true
@@ -20,56 +20,56 @@ showAppearanceSwitcher = true
 showScrollToTop = true
 
 [homepage]
-layout = "profile"
-showRecent = ""
-showRecentItems = 5
-showMoreLink = false
-showMoreLinkDest = "/posts/"
-cardView = false
-cardViewScreenWidth = false
-layoutBackgroundBlur = ""
-homepageImage = "."
+    layout = "profile"
+    showRecent = "true"
+    showRecentItems = 5
+    showMoreLink = true
+    showMoreLinkDest = "/posts/"
+    cardView = false
+    cardViewScreenWidth = false
+    layoutBackgroundBlur = ""
+    homepageImage = "."
 
 [article]
-showDate = true
-showViews = false
-showLikes = false
-showDateOnlyInArticle = false
-showDateUpdated = false
-showAuthor = true
-showHero = false
-layoutBackgroundBlur = true
-layoutBackgroundHeaderSpace = true
-showBreadcrumbs = false
-showDraftLabel = true
-showEdit = false
-editAppendPath = true
-seriesOpened = false
-showHeadingAnchors = true
-showPagination = true
-invertPagination = false
-showReadingTime = true
-showTableOfContents = false
-showTaxonomies = false
-showAuthorsBadges = false
-showWordCount = true
-showZenMode = false
+    showDate = true
+    showViews = false
+    showLikes = false
+    showDateOnlyInArticle = false
+    showDateUpdated = false
+    showAuthor = true
+    showHero = false
+    layoutBackgroundBlur = true
+    layoutBackgroundHeaderSpace = true
+    showBreadcrumbs = false
+    showDraftLabel = true
+    showEdit = false
+    editAppendPath = true
+    seriesOpened = false
+    showHeadingAnchors = true
+    showPagination = true
+    invertPagination = false
+    showReadingTime = true
+    showTableOfContents = false
+    showTaxonomies = false
+    showAuthorsBadges = false
+    showWordCount = true
+    showZenMode = false
 
 [list]
-showHero = false
-layoutBackgroundBlur = true
-layoutBackgroundHeaderSpace = true
-showBreadcrumbs = false
-showSummary = false
-showViews = false
-showLikes = false
-showTableOfContents = false
-showCards = false
-orderByWeight = false
-groupByYear = true
-cardView = false
-cardViewScreenWidth = false
-constrainItemsWidth = false
+    showHero = false
+    layoutBackgroundBlur = true
+    layoutBackgroundHeaderSpace = true
+    showBreadcrumbs = false
+    showSummary = false
+    showViews = false
+    showLikes = false
+    showTableOfContents = false
+    showCards = false
+    orderByWeight = false
+    groupByYear = true
+    cardView = false
+    cardViewScreenWidth = false
+    constrainItemsWidth = false
 
 [sitemap]
 excludedKinds = [ "taxonomy", "term" ]
