--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -21,7 +21,7 @@ showScrollToTop = true
 
 [homepage]
 layout = "background"
-showRecent = "true"
+showRecent = true
 showRecentItems = 5
 showMoreLink = true
 showMoreLinkDest = "/posts/"
