--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -20,7 +20,7 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
     showScrollToTop = true
 
 [homepage]
-    layout = "hero"
+    layout = "profile"
     showRecent = true
     showRecentItems = 5
     showMoreLink = true
