--- a/config/_default/languages.zh-tw.toml
+++ b/config/_default/languages.zh-tw.toml
@@ -12,8 +12,17 @@
     logo = "profile.jpg"
     author = { name = "Jatery Chen", bio = "anxious undergraduate" }
 
-[author]
+[params.author]
     name = "Jatery Chen"
     image = "profile.jpg"
+    imageQuality = 96
     headline = "Why I'm writing this?"
     bio = "anxious undergraduate"
+    links = [
+        { github = "https://github.com/Jatery" }
+        { linkedin = "www.linkedin.com/in/彥璋-陳-80a368356" }
+        { x-twitter = "https://x.com/bluefatbird" }
+        { youtube = "https://www.youtube.com/@bluefatbird" }
+        { soundcloud = "https://soundcloud.com/bluefatbird" }
+        { instagram = "https://www.instagram.com/cyz_jatery/" }
+    ]
