Add gitignore, fix links

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -19,7 +19,7 @@
     bio = "anxious undergraduate"
     links = [
         { github = "https://github.com/Jatery" },
-        { linkedin = "www.linkedin.com/in/彥璋-陳-80a368356" },
+        { linkedin = "https://www.linkedin.com/in/彥璋-陳-80a368356" },
         { x-twitter = "https://x.com/bluefatbird" },
         { youtube = "https://www.youtube.com/@bluefatbird" },
         { soundcloud = "https://soundcloud.com/bluefatbird" },
