--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -44,7 +44,7 @@ rssnext = { }
     showViews = false
     showLikes = false
     showDateOnlyInArticle = false
-    showDateUpdated = false
+    showDateUpdated = true
     showAuthor = true
     showHero = false
     showSummary = true
