--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -8,8 +8,8 @@ disableImageOptimization = false
 disableTextInHeader = false
 giteaDefaultServer = "https://git.fsfe.org"
 forgejoDefaultServer = "https://v8.next.forgejo.org"
-defaultBackgroundImage = "backgroundimage.jpg"
-defaultFeaturedImage = "backgroundimage.jpg"
+defaultBackgroundImage = "backgroundimage.jpeg"
+defaultFeaturedImage = "backgroundimage.jpeg"
 firebase = { }
 fathomAnalytics = { }
 umamiAnalytics = { }
